# ESP32_MCU_Demo

./: .gitignore  README.md  build_env.sh
ESP32-C6-LCD-1.47-Demo/: ReadMe.txt
ESP32-C6-LCD-1.47-Demo/Arduino/: ReadMe.txt
ESP32-C6-LCD-1.47-Demo/ESP-IDF/ESP32-C6-LCD-1.47-Test/main/: CMakeLists.txt  main.c
ESP32-C6-LCD-1.47-Demo/ESP-IDF/ESP32-C6-LCD-1.47-Test/main/LCD_Driver/: ST7789.c  ST7789.h
ESP32-C6-LCD-1.47-Demo/ESP-IDF/ESP32-C6-LCD-1.47-Test/main/LVGL_Driver/: LVGL_Driver.c
ESP32-C6-LCD-1.47-Demo/ESP-IDF/ESP32-C6-LCD-1.47-Test/main/LVGL_UI/: LVGL_Example.c  LVGL_Example.h
ESP32-C6-LCD-1.47-Demo/ESP-IDF/ESP32-C6-LCD-1.47-Test/main/RGB/: RGB.c  RGB.h
ESP32-C6-LCD-1.47-Demo/ESP-IDF/ESP32-C6-LCD-1.47-Test/main/SD_Card/: SD_SPI.c  SD_SPI.h
ESP32-C6-LCD-1.47-Demo/ESP-IDF/ESP32-C6-LCD-1.47-Test/main/Wireless/: Wireless.c  Wireless.h  bluetooth_app.c  bluetooth_app.h  mqtt_app.c  mqtt_app.h  simple_wifi_sta.c  simple_wifi_sta.h
ESP32-C6-LCD-1.47-Demo/ESP-IDF/ESP32-C6-LCD-1.47-Test/main/common/: lib_ring_buffer.c  lib_ring_buffer.h
ESP32-C6-LCD-1.47-Demo/ESP-IDF/ESP32-C6-LCD-1.47-Test/main/lib_soft_i2c/: lib_soft_i2c.c  lib_soft_i2c.h
ESP32-C6-LCD-1.47-Demo/ESP-IDF/ESP32-C6-LCD-1.47-Test/main/sensors/: sensor_eeprom.c  sensor_eeprom.h  sensor_elmos.c  sensor_elmos.h  sensor_ntc.c
ESP32-WROOM-E32/: README.md
ESP32-WROOM-E32/aliot/: .gitignore  CMakeLists.txt  partitions_two_ota_nofactory.csv  sdkconfig  sdkconfig.old
ESP32-WROOM-E32/aliot/main/: CMakeLists.txt  main.c
ESP32-WROOM-E32/aliot/main/src/: aliot.c  aliot.h  aliot_dm.c  aliot_dm.h  aliot_mqtt.c  aliot_mqtt.h  aliot_register.c  aliot_register.h  wifi_manager.c  wifi_manager.h
ESP32-WROOM-E32/ap_prov/: CMakeLists.txt
ESP32-WROOM-E32/ble_basic/: CMakeLists.txt  sdkconfig  sdkconfig.old
ESP32-WROOM-E32/ble_env/: CMakeLists.txt
books/: Tutorials.md
docker/: docker_compose.yaml  dockerfile
(+242 files in other folders)
